# qrcode-generator

./: README.md
qr-back-end-drogon/: .gitignore  CMakeLists.txt  config.json
qr-back-end-drogon/api/: CorsUtils.cc
qr-back-end-drogon/controllers/: QRController.cc  QRController.h
qr-back-end-drogon/services/: PNGDownloadService.cc  PNGDownloadService.h  PNGWriterService.cc  PNGWriterService.h  QRGeneratorService.cc  QRGeneratorService.h  QRPreviewService.cc  QRPreviewService.h
qr-back-end-drogon/src/controllers/: QrController.cc  QrController.h
qr-back-end-drogon/src/interfaces/: IPngWriter.h
qr-back-end-drogon/src/services/: PngService.cc  PngService.h  QrService.cc  QrService.h  SvgService.cc  SvgService.h
qr-back-end-drogon/src/utils/: CorsUtils.cc  CorsUtils.h  PngWriter.cc  PngWriter.h  SvgWriter.cc  SvgWriter.h
qr-front-end-svelte/: package-lock.json  package.json
qr-front-end-svelte/src/: app.html
qr-front-end-svelte/src/routes/: +page.svelte
qr-front-end-svelte/src/services/: qrService.js
